2013-06-13  Michael Albinus  <michael.albinus@gmx.de>

	Implement changes in Secret Service API.  Make it backward compatible.
	* net/secrets.el (secrets-struct-secret-content-type): New defonst.
	(secrets-create-item): Use it.  Prefix properties with interface.

2013-06-13  Michael Hoffman  <9qobl2n02@sneakemail.com>  (tiny change)

	* term.el (term-suppress-hard-newline): New option.  (Bug#12017)
	(term-emulate-terminal): Respect term-suppress-hard-newline.

2013-06-13  E Sabof  <esabof@gmail.com>  (tiny change)

	* image-dired.el (image-dired-dired-toggle-marked-thumbs):
	Only remove a `thumb-file' overlay.  (Bug#14548)

2013-06-12  Grégoire Jadi  <daimrod@gmail.com>

	* mail/reporter.el (reporter-submit-bug-report):
	Handle missing package-name.  (Bug#14600)

2013-06-12  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* textmodes/reftex-cite.el (reftex-cite-regexp-hist)
	(reftex-citation-prompt, reftex-default-bibliography)
	(reftex-bib-or-thebib, reftex-get-bibfile-list)
	(reftex-pop-to-bibtex-entry, reftex-extract-bib-entries)
	(reftex-bib-sort-author, reftex-bib-sort-year)
	(reftex-bib-sort-year-reverse, reftex-get-crossref-alist)
	(reftex-extract-bib-entries-from-thebibliography)
	(reftex-get-bibkey-default, reftex-get-bib-names)
	(reftex-parse-bibtex-entry, reftex-get-bib-field)
	(reftex-format-bib-entry, reftex-parse-bibitem)
	(reftex-format-bibitem, reftex-do-citation)
	(reftex-figure-out-cite-format, reftex-offer-bib-menu)
	(reftex-restrict-bib-matches, reftex-extract-bib-file)
	(reftex-insert-bib-matches, reftex-format-citation)
	(reftex-make-cite-echo-string, reftex-bibtex-selection-callback)
	(reftex-create-bibtex-file): Add docstrings, mostly by converting
	existing comments into docstrings.

2013-06-12  Xue Fuqiao  <xfq.free@gmail.com>

	* ibuf-ext.el (ibuffer-mark-help-buffers): Doc fix.

2013-06-12  Andreas Schwab  <schwab@suse.de>

	* international/mule.el (auto-coding-alist): Use utf-8-emacs-unix
	for auto-save files.
