@@ -1,3 +1,7 @@
+2013-06-13  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/lisp.el (forward-sexp, backward-sexp): Doc fixes.
+
 2013-06-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	Implement changes in Secret Service API.  Make it backward compatible.
